@@ -22,7 +22,7 @@
 
 #include "gssapiP_krb5.h"
 #include <memory.h>
-#include <krb5/rsa-md5.h>
+#include "rsa-md5.h"
 
 /* message_buffer is an input if SIGN, output if SEAL, and ignored if DEL_CTX
    conf_state is only valid if SEAL.
